client/resource/deploy-after.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chocoletter-client-after-deploy
  namespace: chocoletter
  labels:
    app: chocoletter-client-after
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chocoletter-client-after
  template:
    metadata:
      labels:
        app: chocoletter-client-after
    spec:
      imagePullSecrets:
        - name: harbor-registry-key
      containers:
        - name: chocoletter-client-after
          image: chocoletter-client-after-image
          ports:
            - containerPort: 80
