client/resource/http-route-after.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chocoletter-after-route
  namespace: chocoletter
spec:
  parentRefs:
    - name: web-gateway
      namespace: nginx-gateway
      sectionName: http-wildcard
    - name: web-gateway
      namespace: nginx-gateway
      sectionName: https-wildcard
  hostnames:
    - chocoletter-after.sonhs.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: chocoletter-client-after-service
          port: 80
